--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="css/style.css">
 		<script src="http://popcornjs.org/code/dist/popcorn-complete.min.js"></script>
 		<script src="js/pop-test.js"></script>
+		<script src="js/narrativa.js"></script>
 		<style type="text/css"></style>
 	</head>
 	<body>
@@ -21,8 +22,8 @@
 					<ul>
 						<li style="" onclick="hipVidHalf();">Half</li>
 						<li style="" onclick="hipVidReplay();">Replay</li>
-						<li style="display: none;" id="play" onclick="hipVidPlay();">Play</li>
-						<li id="pause" onclick="hipVidPause();">Pause</li>
+						<li id="play" onclick="hipVidPlay();">Play</li>
+						<li style="display: none;" id="pause" onclick="hipVidPause();">Pause</li>
 						<li onclick="hipVidFim();">Fim</li>
 						<li style="" onclick="hipVidFull();">Full</li>
 					</ul>
@@ -31,18 +32,12 @@
 		</header>
 		<main>
 			<section>
-				<div class="conteudo">
-					<div class="grid clearfix hipervideo">
-						<div class="col-1-5 verde" id="evEsq"></div>
-						<div class="col-3-5" id="video">
-							<video style="width: 100%" poster="http://jardim.in/hipervideo/img/splash.jpg" preload="auto" class="" id="hipVid0" style="height: 360px;">
-						       <source type="video/webm" src="http://player.aovivonaweb.tv/HiperVideo_audio_mix6_trilha2.webm"></source>
-						       <source src="http://player.aovivonaweb.tv/HiperVideo_audio_mix6_trilha2.mp4" type="video/mp4"></source>
-					       	</video>
-						</div>
-						<div class="col-1-5 verde" id="evDir"></div>
-					</div>
-				</div>
+					<div class="evento1" id="evEsq"></div>
+					<div class="col-1-5 verde" id="evDir"></div>
+				<video style="width: 100%" poster="http://jardim.in/hipervideo/img/splash.jpg" preload="auto" class="" id="hipVid0" style="height: 360px;">
+			       <source type="video/webm" src="http://player.aovivonaweb.tv/HiperVideo_audio_mix6_trilha2.webm"></source>
+			       <source src="http://player.aovivonaweb.tv/HiperVideo_audio_mix6_trilha2.mp4" type="video/mp4"></source>
+		       	</video>
 			</section>
 		</main>
 		<span id="time">
