--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 		</header>
 		<main>
 			<section>
-					<div class="evento1" id="evEsq"></div>
+					<div class="evento1" id="evEsq">
+						<div id="fr" style="position: relative; float: right; font-size: 150%; margin: 5%;"></div>
+					</div>
 					<div class="col-1-5 verde" id="evDir"></div>
 				<video style="width: 100%" poster="http://jardim.in/hipervideo/img/splash.jpg" preload="auto" class="" id="hipVid0" style="height: 360px;">
 			       <source type="video/webm" src="http://player.aovivonaweb.tv/HiperVideo_audio_mix6_trilha2.webm"></source>
