--- a/public/deficiencia/index.html
+++ b/public/deficiencia/index.html
@@ -4,10 +4,10 @@
 <head>
   <title>Redes Estratégicas</title>
   <meta property="og:site_name" content="redesestrategicassus.org">
-  <meta property="og:title" content="Hipervideo - Saúde do Adolescente">
-  <meta property="og:description" content="Este hipervídeo aborda, entre as diversas ações direcionadas a saúde do adolescente, a Política de Atenção Integral à Saúde de Adolescentes em Conflito com a Lei – PNAISARI, e sua missão de facilitar o acesso do adolescente em conflito com a lei no Serviço Único de Saúde – SUS, com ações intersetoriais nos espaços que desenvolvem programas socioeducativos, favorecendo o fortalecimento de redes e uma maior atuação das secretarias estaduais e municipais de saúde no aporte às necessidades desta população.">
-  <meta property="og:image" content="https://s3-sa-east-1.amazonaws.com/avnaweb/DAPES/foto_adolescente.png">
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,300italic,400italic,500italic">
+  <meta property="og:title" content="Hipervideo - Saúde da Pessoa com Deficiência">
+  <meta property="og:description" content="A ampliação do grau de autonomia das pessoas com deficiência é um compromisso da Rede de Cuidado em Saúde a Pessoa com deficiencia. Na experiência de Goiânia acompanhamos em ato a constituição de uma rede de saberes que agindo de modo integrado e transversal vem  possibilitando transformações nos modos de ver e cuidar, que produzem avanços no direito à saúde e na cidadania da pessoa com deficiência na sociedade brasileira.">
+  <meta property="og:image" content="https://s3-sa-east-1.amazonaws.com/avnaweb/DAPES/foto_deficiencia.png">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,300italic,400italic,500italic">
   <link rel="stylesheet" href="/styles/main.css">
   <link rel="stylesheet" href="/js/libs/rangeslider.css">
   <link rel="stylesheet" href="/modules/leaflet/dist/leaflet.css">
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="/js/libs/slick.css">
   <link rel="stylesheet" href="/js/libs/slick-them.css">
   <link rel="stylesheet" href="/js/libs/magnific-popup.css">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <script type="text/javascript" src="/js/libs/jquery.min.js"></script>
   <script type="text/javascript" src="/js/libs/popcorn.min.js"></script>
   <script type="text/javascript" src="/js/libs/d3.min.js"></script>
@@ -43,7 +43,7 @@
     ga('send', 'pageview');
   </script>
   <script type="text/javascript">
-    window.location = window.location.origin + '/#/adolescente'
+    window.location = window.location.origin + '/#/deficiencia'
   </script>
 </body>
 
