--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
   <meta property="og:site_name" content="redesestrategicassus.org">
   <meta property="og:title" content="Redes Estratégicas do SUS">
   <meta property="og:description" content="Assista e interaja com cinco experiências de efetivação das Redes Temáticas sobre Saúde da Mulher, Saúde da Criança, Saúde do Jovem e Adolescente, Saúde da Pessoa com Deficiência e Saúde da Pessoa Privada de Liberdade.">
-  <meta property="og:image" content="http://s3-sa-east-1.amazonaws.com/avnaweb/DAPES/facebook_nova.png">
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,300italic,400italic,500italic">
+  <meta property="og:image" content="https://s3-sa-east-1.amazonaws.com/avnaweb/DAPES/facebook_nova.png">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,300italic,400italic,500italic">
   <link rel="stylesheet" href="/styles/main.css">
   <link rel="stylesheet" href="/js/libs/rangeslider.css">
   <link rel="stylesheet" href="/modules/leaflet/dist/leaflet.css">
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="/js/libs/slick.css">
   <link rel="stylesheet" href="/js/libs/slick-them.css">
   <link rel="stylesheet" href="/js/libs/magnific-popup.css">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <script type="text/javascript" src="/js/libs/jquery.min.js"></script>
   <script type="text/javascript" src="/js/libs/popcorn.min.js"></script>
   <script type="text/javascript" src="/js/libs/d3.min.js"></script>
