--- a/public/adolescente/index.html
+++ b/public/adolescente/index.html
@@ -4,10 +4,10 @@
 <head>
   <title>Redes Estratégicas</title>
   <meta property="og:site_name" content="redesestrategicassus.org">
-  <meta property="og:title" content="Hipervideo - Saúde da Mulher">
-  <meta property="og:description" content="A Rede Cegonha surge do compromisso com a redução da mortalidade materno-infantil, com a mudança no modelo de atenção obstétrico e avanço da pauta do direito reprodutivo na sociedade brasileira. A experiência de Salvador permite cartografar um processo em construção de avanços, mudanças e desafios para a construção de Redes de Atenção em Saúde com ampliação do acesso, melhoria da atenção e reconhecimento dos direitos das mulheres.">
-  <meta property="og:image" content="https://s3-sa-east-1.amazonaws.com/avnaweb/DAPES/foto_mulher.png">
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,300italic,400italic,500italic">
+  <meta property="og:title" content="Hipervideo - Saúde do Adolescente">
+  <meta property="og:description" content="Este hipervídeo aborda, entre as diversas ações direcionadas a saúde do adolescente, a Política de Atenção Integral à Saúde de Adolescentes em Conflito com a Lei – PNAISARI, e sua missão de facilitar o acesso do adolescente em conflito com a lei no Serviço Único de Saúde – SUS, com ações intersetoriais nos espaços que desenvolvem programas socioeducativos, favorecendo o fortalecimento de redes e uma maior atuação das secretarias estaduais e municipais de saúde no aporte às necessidades desta população.">
+  <meta property="og:image" content="https://s3-sa-east-1.amazonaws.com/avnaweb/DAPES/foto_adolescente.png">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,300italic,400italic,500italic">
   <link rel="stylesheet" href="/styles/main.css">
   <link rel="stylesheet" href="/js/libs/rangeslider.css">
   <link rel="stylesheet" href="/modules/leaflet/dist/leaflet.css">
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="/js/libs/slick.css">
   <link rel="stylesheet" href="/js/libs/slick-them.css">
   <link rel="stylesheet" href="/js/libs/magnific-popup.css">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <script type="text/javascript" src="/js/libs/jquery.min.js"></script>
   <script type="text/javascript" src="/js/libs/popcorn.min.js"></script>
   <script type="text/javascript" src="/js/libs/d3.min.js"></script>
@@ -43,7 +43,7 @@
     ga('send', 'pageview');
   </script>
   <script type="text/javascript">
-    window.location = window.location.origin + '/#/home/mulher'
+    window.location = window.location.origin + '/#/adolescente'
   </script>
 </body>
 
