--- a/public/crianca/index.html
+++ b/public/crianca/index.html
@@ -4,10 +4,10 @@
 <head>
   <title>Redes Estratégicas</title>
   <meta property="og:site_name" content="redesestrategicassus.org">
-  <meta property="og:title" content="Hipervideo - Saúde da Pessoa Privada de Liberdade">
-  <meta property="og:description" content="A experiência de Porto Alegre-RS apresenta a complexidade desse novo território da saúde: o sistema prisional, e o desafio de integração desse novo ponto da Rede de Atenção em Saúde: as Equipe de Atenção Básica Prisional – EABP. Entre a saúde e a justiça emerge um novo campo de práticas mobilizado pelo avanço da garantia dos direitos humanos das pessoas privadas de liberdade.">
-  <meta property="og:image" content="https://s3-sa-east-1.amazonaws.com/avnaweb/DAPES/foto_prisional.png">
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,300italic,400italic,500italic">
+  <meta property="og:title" content="Hipervideo - Saúde da Criança">
+  <meta property="og:description" content="Os componentes da Saúde da Criança na consolidação da Rede Cegonha são explorados nessa rica experiência no município de Florianópolis que expressa o compromisso interfederativo que agrega acúmulos da esfera local com apoio ministerial. O cuidado com primeira infância, boas práticas e humanização do parto e nascimento, a participação da comunidade e o papel da atenção básica na articulação do cuidado do recém-nascido são temas abordados nesse hipervídeo.">
+  <meta property="og:image" content="https://s3-sa-east-1.amazonaws.com/avnaweb/DAPES/foto_crianca.png">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,300italic,400italic,500italic">
   <link rel="stylesheet" href="/styles/main.css">
   <link rel="stylesheet" href="/js/libs/rangeslider.css">
   <link rel="stylesheet" href="/modules/leaflet/dist/leaflet.css">
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="/js/libs/slick.css">
   <link rel="stylesheet" href="/js/libs/slick-them.css">
   <link rel="stylesheet" href="/js/libs/magnific-popup.css">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <script type="text/javascript" src="/js/libs/jquery.min.js"></script>
   <script type="text/javascript" src="/js/libs/popcorn.min.js"></script>
   <script type="text/javascript" src="/js/libs/d3.min.js"></script>
@@ -43,7 +43,7 @@
     ga('send', 'pageview');
   </script>
   <script type="text/javascript">
-    window.location = window.location.origin + '/#/prisional'
+    window.location = window.location.origin + '/#/crianca'
   </script>
 </body>
 
