--- a/public/home/mulher/index.html
+++ b/public/home/mulher/index.html
@@ -7,7 +7,7 @@
   <meta property="og:title" content="Hipervideo - Saúde da Mulher">
   <meta property="og:description" content="A Rede Cegonha surge do compromisso com a redução da mortalidade materno-infantil, com a mudança no modelo de atenção obstétrico e avanço da pauta do direito reprodutivo na sociedade brasileira. A experiência de Salvador permite cartografar um processo em construção de avanços, mudanças e desafios para a construção de Redes de Atenção em Saúde com ampliação do acesso, melhoria da atenção e reconhecimento dos direitos das mulheres.">
   <meta property="og:image" content="https://s3-sa-east-1.amazonaws.com/avnaweb/DAPES/foto_mulher.png">
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,300italic,400italic,500italic">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,300italic,400italic,500italic">
   <link rel="stylesheet" href="/styles/main.css">
   <link rel="stylesheet" href="/js/libs/rangeslider.css">
   <link rel="stylesheet" href="/modules/leaflet/dist/leaflet.css">
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="/js/libs/slick.css">
   <link rel="stylesheet" href="/js/libs/slick-them.css">
   <link rel="stylesheet" href="/js/libs/magnific-popup.css">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <script type="text/javascript" src="/js/libs/jquery.min.js"></script>
   <script type="text/javascript" src="/js/libs/popcorn.min.js"></script>
   <script type="text/javascript" src="/js/libs/d3.min.js"></script>
@@ -43,7 +43,7 @@
     ga('send', 'pageview');
   </script>
   <script type="text/javascript">
-    window.location = window.location.origin + '/#/mulher'
+    window.location = window.location.origin + '/#/home/mulher'
   </script>
 </body>
 
