--- a/public/crianca/index.html
+++ b/public/crianca/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Redes Estratégicas</title>
+  <meta charset="utf-8"/>
   <meta property="og:site_name" content="redesestrategicassus.org">
   <meta property="og:title" content="Hipervideo - Saúde da Criança">
   <meta property="og:description" content="Os componentes da Saúde da Criança na consolidação da Rede Cegonha são explorados nessa rica experiência no município de Florianópolis que expressa o compromisso interfederativo que agrega acúmulos da esfera local com apoio ministerial. O cuidado com primeira infância, boas práticas e humanização do parto e nascimento, a participação da comunidade e o papel da atenção básica na articulação do cuidado do recém-nascido são temas abordados nesse hipervídeo.">
