--- a/public/home/adolescente/index.html
+++ b/public/home/adolescente/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Redes Estratégicas</title>
+  <meta charset="utf-8"/>
   <meta property="og:site_name" content="redesestrategicassus.org">
   <meta property="og:title" content="Hipervideo - Saúde do Adolescente">
   <meta property="og:description" content="Este hipervídeo aborda, entre as diversas ações direcionadas a saúde do adolescente, a Política de Atenção Integral à Saúde de Adolescentes em Conflito com a Lei – PNAISARI, e sua missão de facilitar o acesso do adolescente em conflito com a lei no Serviço Único de Saúde – SUS, com ações intersetoriais nos espaços que desenvolvem programas socioeducativos, favorecendo o fortalecimento de redes e uma maior atuação das secretarias estaduais e municipais de saúde no aporte às necessidades desta população.">
