--- a/public/home/deficiencia/index.html
+++ b/public/home/deficiencia/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Redes Estratégicas</title>
+  <meta charset="utf-8"/>
   <meta property="og:site_name" content="redesestrategicassus.org">
   <meta property="og:title" content="Hipervideo - Saúde da Pessoa com Deficiência">
   <meta property="og:description" content="A ampliação do grau de autonomia das pessoas com deficiência é um compromisso da Rede de Cuidado em Saúde a Pessoa com deficiencia. Na experiência de Goiânia acompanhamos em ato a constituição de uma rede de saberes que agindo de modo integrado e transversal vem  possibilitando transformações nos modos de ver e cuidar, que produzem avanços no direito à saúde e na cidadania da pessoa com deficiência na sociedade brasileira.">
