--- a/public/mobile/index.html
+++ b/public/mobile/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Redes Estratégicas</title>
+  <meta charset="utf-8"/>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,300italic,400italic,500italic">
   <link rel="stylesheet" href="/styles/main.css">
 </head>
