--- a/public/mulher/index.html
+++ b/public/mulher/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Redes Estratégicas</title>
+  <meta charset="utf-8"/>
   <meta property="og:site_name" content="redesestrategicassus.org">
   <meta property="og:title" content="Hipervideo - Saúde da Mulher">
   <meta property="og:description" content="A Rede Cegonha surge do compromisso com a redução da mortalidade materno-infantil, com a mudança no modelo de atenção obstétrico e avanço da pauta do direito reprodutivo na sociedade brasileira. A experiência de Salvador permite cartografar um processo em construção de avanços, mudanças e desafios para a construção de Redes de Atenção em Saúde com ampliação do acesso, melhoria da atenção e reconhecimento dos direitos das mulheres.">
