--- a/public/prisional/index.html
+++ b/public/prisional/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Redes Estratégicas</title>
+  <meta charset="utf-8"/>
   <meta property="og:site_name" content="redesestrategicassus.org">
   <meta property="og:title" content="Hipervideo - Saúde da Pessoa Privada de Liberdade">
   <meta property="og:description" content="A experiência de Porto Alegre-RS apresenta a complexidade desse novo território da saúde: o sistema prisional, e o desafio de integração desse novo ponto da Rede de Atenção em Saúde: as Equipe de Atenção Básica Prisional – EABP. Entre a saúde e a justiça emerge um novo campo de práticas mobilizado pelo avanço da garantia dos direitos humanos das pessoas privadas de liberdade.">
