--- a/public/redes/index.html
+++ b/public/redes/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Redes Estratégicas</title>
+  <meta charset="utf-8"/>
   <meta property="og:site_name" content="redesestrategicassus.org">
   <meta property="og:title" content="Redes Estratégicas do SUS">
   <meta property="og:description" content="Assista e interaja com cinco experiências de efetivação das Redes Temáticas sobre Saúde da Mulher, Saúde da Criança, Saúde do Jovem e Adolescente, Saúde da Pessoa com Deficiência e Saúde da Pessoa Privada de Liberdade.">
